[gd_scene load_steps=5 format=3 uid="uid://kj1iv8a67e0u"]

[ext_resource type="Texture2D" uid="uid://xscci77qcb7m" path="res://assets/sprites/background.png" id="1_76jck"]
[ext_resource type="Script" path="res://space.gd" id="1_n2kof"]
[ext_resource type="FontFile" uid="uid://dwlsmy44sqxo8" path="res://assets/fonts/hour5.ttf" id="3_wmotm"]

[sub_resource type="Curve2D" id="Curve2D_jbyv5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 320, 7, 0, 0, 0, 0, 320, 176)
}
point_count = 2

[node name="Space" type="Node2D"]
script = ExtResource("1_n2kof")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_76jck")
centered = false
metadata/_edit_lock_ = true

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_jbyv5")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(320, 7)
rotation = 1.5708
lookahead = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 320.0
offset_bottom = 26.0
alignment = 1

[node name="ScoreLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.756863, 0, 1)
theme_override_fonts/font = ExtResource("3_wmotm")
theme_override_font_sizes/font_size = 16
text = "score: 0"
uppercase = true

[node name="GameoverLabel" type="Label" parent="."]
visible = false
offset_left = 128.0
offset_top = 79.0
offset_right = 220.0
offset_bottom = 101.0
theme_override_colors/font_color = Color(0, 0.52549, 0.972549, 1)
theme_override_fonts/font = ExtResource("3_wmotm")
theme_override_font_sizes/font_size = 24
text = "GAME OVER"

[node name="RestartTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_restart_timer_timeout"]
